Fixed blogs page on mobile. Fixed navigation on Safari.

--- a/css/reset.css
+++ b/css/reset.css
@@ -5,7 +5,7 @@
 html,
 body {
     background: var(--background-darker);
-    /* min-width: 400px; */
+    min-width: 350px !important;
     width: 100%;
     height: 100%;
 }
