--- a/css/styles/blog.css
+++ b/css/styles/blog.css
@@ -128,6 +128,22 @@
     flex-grow: 1;
 }
 
-.blogs-vertical>*>.blog-preview-title {
+.blogs-vertical .blog-preview-title {
     font-size: 24px;
+}
+
+@media only screen and (max-width: 475px) {
+    #list-blogs {
+        flex-direction: column;
+        overflow-y: scroll !important;
+        height: fit-content;
+    }
+
+    .blogs-horizontal {
+        flex-direction: column;
+    }
+
+    .blog-preview {
+        width: 90vw;
+    }
 }
