--- a/css/styles/page.css
+++ b/css/styles/page.css
@@ -1,9 +1,10 @@
 .content {
     position: relative;
     left: 0;
-    width: 100%;
-    height: calc(100vh - 64px - 48px);
-    
+    width: 100vw;
+    height: 100vh;
+    max-width: 100%;
+    max-height: calc(100vh - 64px - 48px);
     overflow: hidden;
     display: flex;
     flex-direction: row;
